# steelix

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  test.py
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: build_cli.rs  infer.rs  lib.rs  main.rs  webcam.rs
crates/display/: Cargo.toml
crates/display/src/: device.rs  lib.rs  main.rs  plotter.rs  summary.rs  table.rs
crates/ir/: Cargo.toml
crates/ir/src/: helpers.rs  lib.rs  model.rs  op_group.rs  op_node.rs  op_register.rs  shape.rs  tensor.rs  tensor_shape.rs  value_info.rs
crates/ir/src/ops/: mod.rs
crates/ir/src/ops/activation/: clip.rs  softmax.rs
crates/ir/src/ops/binary/: add.rs  matmul.rs
crates/ir/src/ops/data/: constant.rs  initial.rs  unimplemented.rs
crates/ir/src/ops/math/: gemm.rs  mod.rs  sum.rs
crates/ir/src/ops/misc/: concat.rs  constant.rs  initial.rs  mod.rs  unimplemented.rs
crates/ir/src/ops/nn/: batch_norm.rs  conv.rs  depthwise.rs  depthwise_im2col.rs  dropout.rs  im2col.rs  lrn.rs  mod.rs
crates/ir/src/ops/pool/: avg_pool.rs  globalavgpool.rs  max_pool.rs  mod.rs
crates/ir/src/ops/shape/: concat.rs  gather.rs  im2col.rs  mod.rs  pad.rs  reshape.rs  shape.rs  squeeze.rs  transpose.rs  unsqueeze.rs
crates/ir/tests/: helpers.rs  main.rs
crates/ir/tests/ops/: mod.rs
crates/ir/tests/ops/activation/: clip.rs  mod.rs  softmax.rs
crates/ir/tests/ops/nn/: batch_norm.rs  conv.rs  depthwise.rs  depthwise_im2col.rs  im2col.rs  mod.rs
crates/ir/tests/ops/pool/: avg_pool.rs  mod.rs
crates/ir/tests/ops/shape/: gather.rs  im2col.rs  mod.rs  squeeze.rs  unsqueeze.rs
crates/onnx/: Cargo.toml
crates/onnx/src/: lib.rs  pb_helpers.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  onnx_parser.rs
crates/plotter/: Cargo.toml
crates/plotter/src/: lib.rs  main.rs
crates/plotting/: Cargo.toml
crates/plotting/src/: lib.rs  plotter.rs
crates/steelix/: Cargo.toml
crates/steelix/src/: build_cli.rs  main.rs
onnx/: Cargo.toml  build.rs
resources/devices/: a100.json  m1.json  m1_ane.json  rpi4b.json
src/: lib.rs
src/display/: device.rs  plotter.rs
src/ir/: mod.rs  op_node.rs  tensor.rs  value_info.rs
src/ir/ops/binary/: matmul.rs  mod.rs
src/ir/ops/data/: initial.rs  unimplemented.rs
src/ir/ops/math/: gemm.rs  mod.rs
src/ir/ops/nn/: batch_norm.rs  dropout.rs
src/ir/ops/pool/: globalavgpool.rs  max_pool.rs
src/ir/ops/shape/: broadcast.rs  mod.rs  transpose.rs  unsqueeze.rs
src/ir/tests/ops/shape/: reshape.rs  squeeze.rs
src/onnx/: pb_helpers.rs
src/parser/: mod.rs
steelix/: Cargo.toml
steelix/src/: lib.rs  main.rs
steelix/src/display/: device.rs  mod.rs  plotter.rs  summary.rs
steelix/src/ir/: mod.rs  model.rs  op_group.rs  op_node.rs  op_register.rs  shape.rs  tensor.rs  value_info.rs
steelix/src/ir/ops/: mod.rs
steelix/src/ir/ops/activation/: clip.rs  mod.rs  softmax.rs
steelix/src/ir/ops/binary/: add.rs  matmul.rs
steelix/src/ir/ops/data/: constant.rs  initial.rs  unimplemented.rs
steelix/src/ir/ops/math/: gemm.rs  sum.rs
steelix/src/ir/ops/nn/: batch_norm.rs  conv.rs  dropout.rs  lrn.rs  mod.rs
steelix/src/ir/ops/pool/: avg_pool.rs  globalavgpool.rs  max_pool.rs  mod.rs
steelix/src/ir/ops/shape/: broadcast.rs  concat.rs  gather.rs  reshape.rs  shape.rs  squeeze.rs  transpose.rs  unsqueeze.rs
steelix/src/parser/: onnx_parser.rs
steelix/tests/ir/: helpers.rs
steelix/tests/ir/ops/shape/: gather.rs  mod.rs  reshape.rs  shape.rs  squeeze.rs  unsqueeze.rs
