[package]
name = "steelix-onnx"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Your one stop CLI for ONNX model analysis. Featuring graph visualization, FLOP counts, memory metrics and more!"
documentation = "https://docs.rs/steelix/"
homepage = "https://github.com/FL33TW00D/steelix"
repository = "https://github.com/FL33TW00D/steelix"
keywords = ["flops", "machine-learning", "onnx"]
categories = ["command-line-interface", "command-line-utilities"]
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
prost = "0.11"
thiserror = "1.0.35"

[build-dependencies]
prost-build = "0.11"
