[package]
name = "display"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
bytes = "1.1.0"
clap = { version = "3.2", features = ["derive"] }
onnx = { path = "../onnx" }
parser = { path = "../parser" }
ir = { path = "../ir" }
prost = "0.10.4"
dot = { git = "https://github.com/FL33TW00D/dot-rust", branch = "develop" }
tempfile = "3.3.0"
ordered-float = "3.0.0"
npyz = "0.7.0"
tabled = { version = "0.9.0" }
smallvec = "1.9.0"
human-repr = "1.0.1"
half = "2.1.0"
serde = { version = "1.0.145", features = ["derive"] } 
serde_json = "1.0.85"
thiserror = "1.0.35"
