[package]
name = "ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bytes = "1.2.0"
half = "2.1.0"
lazy_static = "1.4.0"
ndarray = { version = "0.15.4", features=["approx", "blas", "rayon"]}
npyz = "0.6.1"
num = "0.4.0"
num-traits = "0.2.15"
onnx = { path = "../onnx" }
rayon = "1.5.3"
smallvec = "1.9.0"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.32"
byteorder = "1.4.3"

[dev-dependencies]
criterion = "0.3.6"
