[package]
name = "steelix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "steelix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bytes = "1.1.0"
clap = { version = "3.2", features = ["derive"] }
onnx = { path = "../onnx" }
parser = { path = "../parser" }
ir = { path = "../ir" }
display = { path = "../display" }
prost = "0.10.4"
dot3 = { version = "0.1.0" }
tempfile = "3.3.0"
ordered-float = "3.0.0"
npyz = "0.7.0"
tabled = { version = "0.9.0" }
smallvec = "1.9.0"
human-repr = "1.0.1"
opener = "0.5.0"
